--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,8 @@ header {
     background-color: rgba(255, 144, 14, 0.1);
     padding: 0 240px;
 }
-main{
+
+main {
     margin: 130px 240px;
 }
 
@@ -70,31 +71,87 @@ nav {
 .banner-title {
     font-size: 64px;
 }
-/* Our Features Section style */
-.our-features{
+
+/*Team Work Section style */
+.our-features {
     margin: 0 61px;
     display: flex;
     align-items: center;
     column-gap: 73px;
 }
-.features-img{
+
+.features-img {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
 }
-.features-h1{
+
+.features-h1 {
     color: #727272;
 }
-.features-h2{
+
+.features-h2 {
     color: #FF900E;
 }
 
+/* Features Details Section */
+.features-description h1 {
+    border-left: 5px solid #FF900E;
+    padding-left: 21px;
+}
+
+.features-details {
+    display: flex;
+    column-gap: 146px;
+    align-items: center;
+    margin: 130px 0;
+}
+
+.features-description-list {
+    margin-top: 30px;
+    padding: 30px;
+}
+
+.features-description-list h3 {
+    font-size: 20px;
+}
+.features-detail-pic{
+    position: relative;
+}
+
+.experience {
+    text-align: center;
+    width: 342px;
+    height: 200px;
+    background: #FF900E;
+    border-radius: 8px;
+    position: absolute;
+    top: 859px;
+    right: 458px;
+}
+.experience h2{
+    font-size: 65px;
+    color: white;
+    line-height: 30px;
+}
+.experience span{
+    font-size: 20px;
+    top: -50px;
+}
+
+
+
+
+
 /* Mobile Device Responsive */
 @media screen and (max-width:576px) {
-    header,main {
+
+    header,
+    main {
         padding: 0;
     }
-    main{
+
+    main {
         margin: 50px 0;
     }
 
@@ -145,20 +202,56 @@ nav {
     .banner-img img {
         width: 100%;
     }
-    /* our features section responsive */
-    .features-img{
+
+    /* Team work section responsive */
+    .features-img {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         row-gap: 10px;
     }
+
     .features-img img {
         width: 100%;
     }
-    .our-features{
-        margin: 0 ;
+
+    .our-features {
+        margin: 0;
         flex-direction: column;
     }
-    .features-info {
+
+    .features-discursion-info {
         text-align: center;
+    }
+    /* Features Details Section  responsive*/
+    .features-details {
+        display: flex;
+        flex-direction: column;
+        column-gap: 146px;
+        align-items: center;
+        margin: 50px 0;
+    }
+    .features-description{
+        width: 100%;
+    }
+    .features-detail-pic img{
+        width: 100%;
+    }
+    .experience {
+        width: 180px;
+        height: 80px;
+        top: 475px;
+        right: 0;
+        left: 90px;
+    }
+    .experience h2{
+        font-size: 28px;
+        line-height: 20px;
+    }
+    .experience span{
+        font-size: 14px;
+    }
+    .features-description-list {
+        margin-top: 10px;
+        padding: 0 30px 10px 30px;
     }
 }
