--- a/style/style.css
+++ b/style/style.css
@@ -115,7 +115,8 @@ nav {
 .features-description-list h3 {
     font-size: 20px;
 }
-.features-detail-pic{
+
+.features-detail-pic {
     position: relative;
 }
 
@@ -129,19 +130,52 @@ nav {
     top: 859px;
     right: 458px;
 }
-.experience h2{
+
+.experience h2 {
     font-size: 65px;
     color: white;
     line-height: 30px;
 }
-.experience span{
+
+.experience span {
     font-size: 20px;
     top: -50px;
 }
 
+/* Achievement Section */
+.achievement-list {
+    display: flex;
+    margin-top: 100px;
+    column-gap: 124px;
+    justify-content: center;
+}
 
+.achievement {
+    padding: 10px;
+    text-align: center;
+    width: 241.83px;
+    height: 241.83px;
+    border: 1px solid#FF900E;
+    border-radius: 5px;
+    transition: width 2s, height 2s, font-size 2s;
+    transition-timing-function: linear;
+}
 
+.achievement:hover {
+    padding: 20px;
+    width: 300px;
+    color: white;
+    height: 300px;
+    background-color: rgba(173, 216, 230, 0.608);
+}
+.achievement h1{
+    transition:font-size 2s;
+    transition-timing-function: linear;
+}
 
+.achievement:hover h1{
+    font-size: 80px;
+}
 
 /* Mobile Device Responsive */
 @media screen and (max-width:576px) {
@@ -222,6 +256,7 @@ nav {
     .features-discursion-info {
         text-align: center;
     }
+
     /* Features Details Section  responsive*/
     .features-details {
         display: flex;
@@ -230,12 +265,15 @@ nav {
         align-items: center;
         margin: 50px 0;
     }
-    .features-description{
+
+    .features-description {
         width: 100%;
     }
-    .features-detail-pic img{
+
+    .features-detail-pic img {
         width: 100%;
     }
+
     .experience {
         width: 180px;
         height: 80px;
@@ -243,13 +281,16 @@ nav {
         right: 0;
         left: 90px;
     }
-    .experience h2{
+
+    .experience h2 {
         font-size: 28px;
         line-height: 20px;
     }
-    .experience span{
+
+    .experience span {
         font-size: 14px;
     }
+
     .features-description-list {
         margin-top: 10px;
         padding: 0 30px 10px 30px;
