--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,12 @@ main {
     margin: 130px 240px;
 }
 
+footer {
+    background-color: rgba(255, 144, 14, 0.1);
+    margin: 0 240px 20px 240px;
+
+}
+
 .heading {
     font-size: 45px;
 }
@@ -193,7 +199,11 @@ nav {
     width: 862px;
 }
 
-
+/* footer */
+footer p {
+    text-align: center;
+    padding: 39px 410px;
+}
 
 
 
@@ -201,7 +211,8 @@ nav {
 @media screen and (max-width:576px) {
 
     header,
-    main {
+    main,
+    footer {
         padding: 0;
     }
 
@@ -365,5 +376,13 @@ nav {
         margin-top: 50px;
     }
 
+    /* footer responsive */
+    footer {
+        background-color: rgba(255, 144, 14, 0.1);
+        margin: 0;
+    }
 
+    footer p {
+        padding: 0;
+    }
 }
